# sub-convert

./: CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
deploy/: bootstrap.sh  install.sh  subscription-converter.service
docs/: DEPLOYMENT.zh-CN.md
sub_convert.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
subscription_converter/: __init__.py  cli.py  config.py  models.py  parser.py  rules.py  service.py  state.py  writer.py
subscription_converter/renderers/: __init__.py  clash.py  singbox.py
tests/: test_deploy_files.py
tests/subscription_converter/: test_cli.py  test_parser.py  test_renderers.py  test_service.py
tests/subscription_converter/fixtures/: sample_base64.txt
